--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=WIN-CL40MTL5BMA\\SQLEXPRESS;Database=TDPC12EF;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
