--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WIN-CL40MTL5BMA\\SQLEXPRESS;Database=TDPC12EF;Integrated Security=True;"
+    "DefaultConnection": "Server=ALE-ASUS-PROART;Database=TDPC12EF;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
