--- a/TDPC12-ASPNETCore3.1WebAppMVC.csproj
+++ b/TDPC12-ASPNETCore3.1WebAppMVC.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
