--- a/TDPC12-ASPNETCore3.1WebAppMVC.csproj
+++ b/TDPC12-ASPNETCore3.1WebAppMVC.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>TDPC12_ASPNETCore3._1WebAppMVC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
+  </ItemGroup>
+
 </Project>
